--- a/demo/index.html
+++ b/demo/index.html
@@ -45,6 +45,11 @@
         <gig-input type="url" class="input" placeholder="Escribe una url" required group="http://"></gig-input>
     </div>
 
+    <div class="field">
+        <label>Input color</label>
+        <gig-input type="color" class="input" placeholder="Elige un color" required></gig-input>
+    </div>
+
 
 </body>
 
