--- a/gig-input.html
+++ b/gig-input.html
@@ -1,12 +1,13 @@
 <!--
- Webcomponents to manage and generate one slug. Returns value
- @version v0.0.9 - 2015-12-17
+ Webcomponents to manage input. Returns value
+ @version v0.0.10 - 2015-12-21
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
  -->
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="gig-input-date-behavior.html">
+<link rel="import" href="gig-input-color-behavior.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
 <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
 <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
@@ -149,6 +150,8 @@
             line-height: 34px;
             border-right: 0;
             padding: 0 10px;
+            border-bottom-right-radius: 0;
+            border-top-right-radius: 0;
         }
 
         .field-group span.icon {
@@ -157,13 +160,24 @@
             padding: 0;
             border-bottom-left-radius: 0;
             border-top-left-radius: 0;
+            border-bottom-right-radius: 3px;
+            border-top-right-radius: 3px;
             border-left: 0;
+            border-right: 1px solid #e4eaec;
+        }
+
+        .field-group span.icon i {
+            display: block;
+            width: 16px;
+            height: 16px;
+            margin: 10px;
+            cursor: pointer;
         }
 
     </style>
 
     <template>
-        <div class="field-group" class$="[[getClassGroup(icon, group)]]">
+        <div class="field-group" class$="[[getClassGroup(icon, group, type)]]">
 
             <template is="dom-if" if="[[group]]">
                 <span>[[group]]</span>
@@ -182,7 +196,7 @@
                name$="[[name]]"
                readonly$="[[readonly]]"
                type="{{typeFormat}}"
-               value="{{value}}"
+               value="[[value]]"
                class$="[[getClassList(errorMessage)]]"
                on-keyup="keyupEvent"
                on-focus="focusEvent"
@@ -190,6 +204,10 @@
 
                <template is="dom-if" if="[[icon]]">
                    <span class$="[[getClassIcon(icon)]]"></span>
+               </template>
+
+               <template is="dom-if" if="[[checkColor(type)]]">
+                   <span class$="[[getClassIcon(icon)]]"><i style$="background-color: [[value]]" on-click="focusInput"></i></span>
                </template>
 
         </div>
@@ -218,6 +236,7 @@
                 is: 'gig-input',
                 behaviors: [
                     Polymer.GigInputDateBehavior,
+                    Polymer.GigInputColorBehavior,
                     Polymer.IronFormElementBehavior,
                     Polymer.IronValidatableBehavior
                 ],
@@ -238,18 +257,25 @@
                         return this.value != '';
                     }
                 },
+                focusInput: function() {
+                    this.$.input.focus();
+                },
                 ready: function() {
                     this._checkType();
                     if (this.type === 'date' || this.type === 'datetime') {
                         this.enableDate(this.type);
                     }
 
+                    if (this.type === 'color') {
+                        this.enableColor();
+                    }
+
                     this._getValidity();
                 },
-                getClassGroup: function(icon, group) {
+                getClassGroup: function(icon, group, type) {
                     var classList = 'field-group';
 
-                    if (icon) {
+                    if (icon || type == 'color') {
                         classList += ' group-icon';
                     }
 
@@ -258,6 +284,11 @@
                     }
 
                     return classList;
+                },
+                checkColor: function(type) {
+                    if (type === 'color') {
+                        return true;
+                    }
                 },
                 getClassIcon: function(icon) {
                     return 'icon fa '+icon;
@@ -336,7 +367,7 @@
                     return str;
                 },
                 _checkType: function() {
-                    if (this.type === 'slug' || this.type === 'date') {
+                    if (this.type === 'slug' || this.type === 'date' || this.type === 'color') {
                         this.typeFormat = 'text';
                     }
                     else {
@@ -351,7 +382,8 @@
                     value: {
                         type: String,
                         value: '',
-                        notify: true
+                        notify: true,
+                        reflectToAttribute: true
                     },
                     required: {
                         type: Boolean,
@@ -390,6 +422,10 @@
                         type: String,
                         value: 'en',
                         notify: true
+                    },
+                    group: {
+                        type: String,
+                        value: null
                     }
                 }
             })
