--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,8 @@
     </style>
 </head>
 <body>
+
+
     <div class="field">
         <label>Input standard</label>
         <gig-input type="text" class="input" placeholder="Escribe un texto" maxlength="23" required></gig-input>
@@ -47,8 +49,10 @@
 
     <div class="field">
         <label>Input color</label>
-        <gig-input type="color" class="input" placeholder="Elige un color" required></gig-input>
+        <gig-input type="color" name="dos" class="input" placeholder="Elige un color" required></gig-input>
     </div>
+
+
 
 
 </body>
