--- a/gig-input.html
+++ b/gig-input.html
@@ -1,11 +1,13 @@
 <!--
- Webcomponents to manage input. Returns value
- @version v0.0.10 - 2015-12-21
+ Webcomponents to manage input
+ @version v0.0.10 - 2015-12-25
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
  -->
+
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
 <link rel="import" href="gig-input-date-behavior.html">
 <link rel="import" href="gig-input-color-behavior.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
@@ -174,6 +176,10 @@
             cursor: pointer;
         }
 
+        iron-overlay-backdrop {
+            z-index: 1000;
+        }
+
     </style>
 
     <template>
@@ -212,6 +218,14 @@
 
         </div>
 
+        <template is="dom-if" if="[[checkColor(type)]]" on-dom-change="readyTemplate" id="color">
+            <div class="modal-color cp-default" hidden$="{{!showColor}}">
+                <div class="picker"></div>
+                <div class="slide"></div>
+            </div>
+
+        </template>
+
         <template is="dom-if" if="[[errorMessage]]">
             <div class="error small">[[errorMessage]]</div>
         </template>
@@ -219,6 +233,8 @@
         <template is="dom-if" if="{{maxLengthShow}}">
             <span class$="[[_getMaxLengthClass(value, maxlength)]]"><span>{{length(value)}}</span> / <span>{{maxlength}}</span></span>
         </template>
+
+        <iron-overlay-backdrop hidden$="{{!showColor}}" id="overlay" on-click="hideColor"></iron-overlay-backdrop>
 
     </template>
 
@@ -260,15 +276,17 @@
                 focusInput: function() {
                     this.$.input.focus();
                 },
+                readyTemplate: function() {
+                    if (this.type === 'color') {
+                        this.enableColor();
+                    }
+                },
                 ready: function() {
                     this._checkType();
                     if (this.type === 'date' || this.type === 'datetime') {
                         this.enableDate(this.type);
                     }
 
-                    if (this.type === 'color') {
-                        this.enableColor();
-                    }
 
                     this._getValidity();
                 },
@@ -316,6 +334,10 @@
                 },
                 focusEvent: function(e) {
                     this._checkMaxLength();
+
+                    if (this.type === 'color') {
+                        this.showColor = true;
+                    }
                 },
                 blurEvent: function() {
                     this.maxLengthShow = false;
@@ -426,6 +448,10 @@
                     group: {
                         type: String,
                         value: null
+                    },
+                    showColor: {
+                        type: Boolean,
+                        value: false
                     }
                 }
             })
