--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,12 @@
         <gig-input type="color" name="dos" class="input" placeholder="Elige un color" required></gig-input>
     </div>
 
+    <div class="field">
+        <label>Input slug</label>
+        <gig-input type="slug" name="slug" class="input" placeholder="Escribe un slug" required></gig-input>
+    </div>
+
+
 
 
 
