--- a/gig-input.html
+++ b/gig-input.html
@@ -1,18 +1,172 @@
 <!--
  Webcomponents to manage input
- @version v0.0.10 - 2015-12-25
+ @version v0.0.10 - 2015-12-27
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
  -->
+<link href="../polymer/polymer.html">
+<script src="colorpicker.js"></script>
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
+<style>
+/* Common stuff */
+.picker-wrapper,
+.slide-wrapper {
+    position: relative;
+    float: left;
+}
+.picker-indicator,
+.slide-indicator {
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+}
+.picker,
+.slide {
+    cursor: crosshair;
+    float: left;
+}
+
+/* Default skin */
+
+.cp-default {
+    background-color: white;
+    border: 1px solid #e4eaec;
+    padding: 7px;
+    margin-top: 5px;
+    box-shadow: 0 3px 12px rgba(0,0,0,.05);
+    border-radius: 3px;
+    position:absolute;
+    z-index: 100000;
+}
+.cp-default .picker {
+    width: 150px;
+    height: 150px;
+}
+.cp-default .slide {
+    width: 30px;
+    height: 150px;
+    margin-left: 5px;
+}
+.cp-default .slide-wrapper {
+    margin-left: 10px;
+}
+.cp-default .picker-indicator {
+    width: 5px;
+    height: 5px;
+    border: 2px solid darkblue;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    opacity: .5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+    filter: alpha(opacity=50);
+    background-color: white;
+}
+.cp-default .slide-indicator {
+    width: 100%;
+    height: 10px;
+    left: -4px;
+    opacity: .6;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+    filter: alpha(opacity=60);
+    border: 4px solid lightblue;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: white;
+}
+
+
+</style>
+
+<script>
+    Polymer.GigInputColorBehavior = {
+        enableColor: function() {
+            var self = this;
+            ColorPicker(
+                this.querySelector('.slide'),
+                this.querySelector('.picker'),
+                function(hex, hsv, rgb) {
+                    self.value = hex;
+                }
+            );
+        },
+        hideColor: function() {
+            this.showColor = false;
+        }
+
+    }
+</script>
+
+<link href="../polymer/polymer.html">
+<script src="../pikaday-time/pikaday.js"></script>
+<script src="../moment/moment.js"></script>
+<script src="../moment/locale/es.js"></script>
+<link rel="stylesheet" href="../pikaday-time/css/pikaday.css">
+
+
+<script>
+    Polymer.GigInputDateBehavior = {
+        enableDate: function() {
+            self = this;
+
+            if (this.type == 'datetime') {
+                this.showTime = true;
+            } else {
+                this.showTime = false;
+            }
+
+            moment.locale(self.lang);
+
+            var picker = new Pikaday({
+                showTime: this.showTime,
+                use24hour: true,
+                field: this.$.input,
+                format: this.formatDate,
+                position: 'bottom left',
+                reposition: false,
+                minDate: this.minDate,
+                i18n: {
+                    previousMonth : 'Previous Month',
+                    nextMonth     : 'Next Month',
+                    months        : moment.localeData()._months,
+                    weekdays      : moment.localeData()._weekdays,
+                    weekdaysShort : moment.localeData()._weekdaysShort
+                },
+                onSelect: function (date) {
+                    self.$.input.value = moment(date).format(self.formatDate);
+                }
+            });
+
+        },
+        properties: {
+            formatDate: {
+                type: String,
+                notify: true
+            },
+            minDate: {
+                type: Date,
+                value: null
+            }
+        }
+
+    }
+</script>
+
+
+<link rel="import" href="..//polymer/polymer.html">
+<link rel="import" href="..//iron-overlay-behavior/iron-overlay-backdrop.html">
 <link rel="import" href="gig-input-date-behavior.html">
 <link rel="import" href="gig-input-color-behavior.html">
-<link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
-<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
-<link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+<link rel="stylesheet" href="..//components-font-awesome/css/font-awesome.css">
+<link rel="import" href="..//iron-validatable-behavior/iron-validatable-behavior.html">
+<link rel="import" href="..//iron-form-element-behavior/iron-form-element-behavior.html">
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 <script>
   WebFont.load({
@@ -260,8 +414,6 @@
                     'input': '_onInput'
                 },
                 _onInput: function() {
-                     this.value = this.$.input.value;
-
                      if (this._getValidity()) {
                          this.errorMessage = null;
                      }
