--- a/demo/gig-input.html
+++ b/demo/gig-input.html
@@ -403,7 +403,8 @@
                 properties: {
                     name: {
                         type: String,
-                        notify: true
+                        notify: true,
+                        reflectToAttribute: true
                     },
                     value: {
                         type: String,
