--- a/gig-input.html
+++ b/gig-input.html
@@ -397,7 +397,8 @@
                 properties: {
                     name: {
                         type: String,
-                        notify: true
+                        notify: true,
+                        reflectToAttribute: true
                     },
                     value: {
                         type: String,
