--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -390,7 +390,8 @@
                 properties: {
                     name: {
                         type: String,
-                        notify: true
+                        notify: true,
+                        reflectToAttribute: true
                     },
                     value: {
                         type: String,
