--- a/gig-input.html
+++ b/gig-input.html
@@ -5,6 +5,24 @@
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
  -->
+
+ <link rel="import" href="../polymer/polymer.html">
+ <link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
+ <link rel="import" href="gig-input-date-behavior.html">
+ <link rel="import" href="gig-input-color-behavior.html">
+ <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
+ <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
+ <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+ <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+ <script>
+   WebFont.load({
+     google: {
+       families: ['Roboto:300,400']
+     }
+   });
+ </script>
+
+ 
 <dom-module id="gig-input">
 
     <style>
