--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -1,19 +1,14 @@
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
-<link rel="import" href="gig-input-date-behavior.html">
-<link rel="import" href="gig-input-color-behavior.html">
-<link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
-<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
-<link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-<script>
-  WebFont.load({
-    google: {
-      families: ['Roboto:300,400']
-    }
-  });
-</script>
+
+ <link rel="import" href="../polymer/polymer.html">
+ <link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
+ <link rel="import" href="gig-input-date-behavior.html">
+ <link rel="import" href="gig-input-color-behavior.html">
+ <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
+ <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
+ <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+ <link rel="stylesheet" href="../font-roboto/dist/styles/roboto.min.css">
+
 
 <dom-module id="gig-input">
 
@@ -109,6 +104,26 @@
         }
 
         .maxlength.error {
+            background-color: var(--input-color-error, #f96868);
+            color: white !important;
+        }
+
+        .minlength {
+            float: left;
+            border-radius: 3px;
+            margin: 5px 0;
+            color: white;
+            font-weight: bold;
+            padding: 2px 5px;
+            font-size: 75%;
+            display: block
+        }
+
+        .minlength.success {
+            background-color: var(--input-color-success, #46BE8A);
+        }
+
+        .minlength.error {
             background-color: var(--input-color-error, #f96868);
             color: white !important;
         }
@@ -228,6 +243,10 @@
             <span class$="[[_getMaxLengthClass(value, maxlength)]]"><span>{{length(value)}}</span> / <span>{{maxlength}}</span></span>
         </template>
 
+        <template is="dom-if" if="{{minLengthShow}}">
+            <span class$="[[_getMinLengthClass(value, minlength)]]"><span>{{length(value)}}</span> / <span>{{minlength}}</span></span>
+        </template>
+
         <iron-overlay-backdrop hidden$="{{!showColor}}" id="overlay" on-click="hideColor"></iron-overlay-backdrop>
 
     </template>
@@ -323,9 +342,11 @@
                         break;
                     }
                     this._checkMaxLength();
+                    this._checkMinLength();
                 },
                 focusEvent: function(e) {
                     this._checkMaxLength();
+                    this._checkMinLength();
 
                     if (this.type === 'color') {
                         this.showColor = true;
@@ -350,6 +371,18 @@
                     }
 
                 },
+                _checkMinLength: function() {
+
+                    if (this.$.input.value && this.minlength) {
+
+                        if (this.$.input.value.length < this.minlength + 2) {
+                            this.minLengthShow = true;
+                        } else {
+                            this.minLengthShow = false;
+                        }
+                    }
+
+                },
                 _getMaxLengthClass: function(value, maxlength) {
 
                     var classList = 'maxlength';
@@ -363,6 +396,18 @@
 
                     return classList;
 
+                },
+                _getMinLengthClass: function(value, minlength) {
+
+                    var classList = 'minlength';
+
+                    if (this.$.input.value.length < this.minlength) {
+                        classList += ' error';
+                    } else {
+                        classList += ' success';
+                    }
+
+                    return classList;
                 },
                 _generatorSlug: function(str) {
                     str = str.replace(/^\s+|\s+$/g, '');
@@ -432,6 +477,13 @@
                         type: Number
                     },
                     maxLengthShow: {
+                        type: Boolean,
+                        notify: true
+                    },
+                    minlength: {
+                        type: Number
+                    },
+                    minLengthShow: {
                         type: Boolean,
                         notify: true
                     },
