Bugfix add Change Event

--- a/demo/gig-input.html
+++ b/demo/gig-input.html
@@ -433,6 +433,9 @@
                         this.typeFormat = this.type;
                     }
                 },
+                changeValue: function(value) {
+                    this.fire('change');
+                },
                 properties: {
                     name: {
                         type: String,
@@ -443,7 +446,8 @@
                         type: String,
                         value: '',
                         notify: true,
-                        reflectToAttribute: true
+                        reflectToAttribute: true,
+                        observer: 'changeValue'
                     },
                     required: {
                         type: Boolean,
